<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sl_weather"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_now"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:id="@+id/ll_weather_now"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <ImageView
                        android:id="@+id/img_weather_now"
                        android:layout_width="80pt"
                        android:layout_height="80pt"
                        android:layout_gravity="center_vertical"
                        android:padding="20pt"
                        android:src="@mipmap/cond_icon_100" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="14pt"
                        android:layout_marginBottom="14pt"
                        android:background="@color/black" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingLeft="15pt">

                        <TextView
                            android:id="@+id/txt_temp_new"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="13 ℃"
                            android:textColor="@color/black"
                            android:textSize="18pt" />

                        <TextView
                            android:id="@+id/txt_weather_now"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="晴朗"
                            android:textColor="@color/color_text2"
                            android:textSize="6pt" />

                        <TextView
                            android:id="@+id/txt_wind_now"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="东风-2级"
                            android:textColor="@color/color_text2"
                            android:textSize="6pt" />

                        <TextView
                            android:id="@+id/txt_update"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="更新于 2018-11-21"
                            android:textColor="@color/color_text2"
                            android:textSize="6pt" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_daily_forecast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="5dp" />

                    <com.sctdroid.app.uikit.CurveView
                        android:id="@+id/curve_view_hourly"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:axisTextColor="@color/color_text"
                        app:axisTextSize="6pt"
                        app:backgroundColor="@color/white"
                        app:contentColor="@color/color_text"
                        app:contentPaddingBottom="20dp"
                        app:contentPaddingEnd="30dp"
                        app:contentPaddingStart="30dp"
                        app:contentPaddingTop="10dp"
                        app:corner="1px"
                        app:dotTextColor="@color/color_text"
                        app:dotTextGravity="center_horizontal|bottom"
                        app:dotTextSize="8sp"
                        app:showAll="true"
                        app:showXLine="false"
                        app:showXText="true"
                        app:strokeWidth="4px"
                        app:unitWidth="80dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_hourly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="10dp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10pt">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10pt"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/fl_temp"
                                android:textColor="@color/color_text"
                                android:textSize="6pt" />

                            <TextView
                                android:id="@+id/txt_fl_temp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2pt"
                                android:text="17 °"
                                android:textColor="@color/color_text2"
                                android:textSize="8pt" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10pt"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/hum"
                                android:textColor="@color/color_text"
                                android:textSize="6pt" />

                            <TextView
                                android:id="@+id/txt_hum"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2pt"
                                android:text="23 %"
                                android:textColor="@color/color_text2"
                                android:textSize="8pt" />
                        </LinearLayout>


                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6pt">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10pt"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/wind_sc"
                                android:textColor="@color/color_text"
                                android:textSize="6pt" />

                            <TextView
                                android:id="@+id/txt_wind_sc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2pt"
                                android:text="3-4级"
                                android:textColor="@color/color_text2"
                                android:textSize="8pt" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10pt"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/wind_dir"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/wind_dir"
                                android:textColor="@color/color_text"
                                android:textSize="6pt" />

                            <TextView
                                android:id="@+id/txt_wind_spd"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2pt"
                                android:text="20 km/h"
                                android:textColor="@color/color_text2"
                                android:textSize="8pt" />

                        </LinearLayout>

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6pt">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10pt"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pcpn"
                                android:textColor="@color/color_text"
                                android:textSize="6pt" />

                            <TextView
                                android:id="@+id/txt_pcpn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2pt"
                                android:text="120"
                                android:textColor="@color/color_text2"
                                android:textSize="8pt" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10pt"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pres"
                                android:textColor="@color/color_text"
                                android:textSize="6pt" />

                            <TextView
                                android:id="@+id/txt_pres"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2pt"
                                android:text="1020 百帕"
                                android:textColor="@color/color_text2"
                                android:textSize="8pt" />

                        </LinearLayout>

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6pt">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10pt"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/vis"
                                android:textColor="@color/color_text"
                                android:textSize="6pt" />

                            <TextView
                                android:id="@+id/txt_vis"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2pt"
                                android:text="10"
                                android:textColor="@color/color_text2"
                                android:textSize="8pt" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10pt"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cloud"
                                android:textColor="@color/color_text"
                                android:textSize="6pt" />

                            <TextView
                                android:id="@+id/txt_cloud"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2pt"
                                android:text="23"
                                android:textColor="@color/color_text2"
                                android:textSize="8pt" />

                        </LinearLayout>

                    </TableRow>

                </TableLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_lifestyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>